# cards-proj

./: .gitignore  README.md  create_venv.sh  makefile  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  tox.ini
.github/workflows/: tests.yml
book_exercises/: conftest.py
book_exercises/ch02/: test_experiment.py
book_exercises/ch03/: test_fixtures_exercise.py
book_exercises/ch04/: test_print.py
book_exercises/ch05/: test_func_param.py
book_exercises/ch06/: test_skip.py  test_skipif.py  test_start_markers.py
book_exercises/ch10/: my_info.py  test_my_info.py
book_exercises/ch12/: pytest.ini  sums.py  test_sums.py  tox.ini
book_exercises/ch12/src/: sums.py
book_exercises/ch12/tests/: test_sums.py
cards/: api.py  cli.py
tests/: .pylintrc  conftest.py  test_helper.py
tests/api/: test_list.py
tests/ch02/: test_alt_fail.py  test_card_fail.py
tests/ch03/: test_fixtures.py
tests/ch04/: hello_world.py  test_config.py  test_version.py
tests/ch05/: test_finish.py  test_finish_combined.py  test_fix_param.py  test_func_param.py  test_gen.py  test_start.py
tests/ch06/: test_finish_markers.py  test_markers.py  test_num_cards.py  test_xfail.py
tests/cli/: test_cli.py  test_errors.py
