[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cards"
authors = [{name = "Brian Okken", email = "brian+pypi@pythontest.com"},
            {name = "Justin Wagner", email = "jrwagz@gmail.com"}]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
requires-python=">=3.7"
dynamic = ["version", "description"]
dependencies = [
    "tinydb",
    "typer",
    "rich",
]

[project.optional-dependencies]
test = [
    "pytest",
    "faker",
    "tox",
    "coverage",
    "pytest-cov",
    "black",
]

[project.urls]
Home = "https://github.com/jrwagz/cards-proj"

[project.scripts]
cards = "cards:app"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-v",
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov-report=html",
    "--cov-report=xml:coverage.xml",
    "--cov=cards",
    "--cov=tests",
]
xfail_strict = 1
markers = [
    "smoke: subset of tests",
    "exception: check for expected exceptions​",
    "num_cards: specify number of cards in the db",
]
testpaths = [
    "tests",
]
# python path is not useful in this repo because we treat each example as independent
# pythonpath = .

[tool.black]
line-length = 100
target-version = ['py310']
exclude = '(\.eggs|\.git|\.mypy_cache|\.nox|\.tox|.*venv|dist|\.vscode|\.pytype)'

[tool.isort]
profile = "black"
py_version = 310
force_sort_within_sections = true
skip = ".git,.pytype,.venv"

[tool.coverage.run]
branch = true